--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,18 +1,19 @@
 .red {
-    border: 1px solid red;
+  border: 1px solid red;
 }
 
 .green {
-    border: 1px solid green;
+  border: 1px solid green;
 }
 
 .login-left {
-    background-image: url("../images/background.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.05);
-    opacity: 0.9;
-    height: 600px;
-    border-radius: 3px;
+  background-image: url("../images/background.jpg");
+  /*background-image: url("https://w0.peakpx.com/wallpaper/371/86/HD-wallpaper-cool-monkey-art-thumbnail.jpg");*/
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.05);
+  opacity: 0.9;
+  height: 600px;
+  border-radius: 3px;
 }
