--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -14,14 +14,11 @@
 <body>
 <div class="container">
     <div class="container mt-5">
-        <h1>HomePage - Hello world</h1>
+        <h1>Pagina Principal</h1>
         <div>
-           <h2>Bienvenido {{pass_json user.fullname}}</h2>
+           <h2>Bienvenido {{pass_json user.name}} {{pass_json user.lastName}}</h2>
             <br>
             <div>
-                <form method="POST" action="/logout">
-                    <button type="submit" class="btn btn-primary">Log out</button>
-                </form>
             </div>
         </div>
     </div>
