--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Login page</title>
+    <title>Inicio de Sesión</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -20,53 +20,47 @@
           </div>
           <div class="col-5 mt-2">
             <div>
+              {{#check errors}}
+                <div class="alert alert-danger">
+                  {{cortarTexto errors}}
+                </div>
+
+              {{/check}}
 
             </div>
-            {{test_helper}}
 
             <form method="POST" action="/login">
               <div class="form-group">
-                <label for="email">Email address:</label>
+                <label for="email">Correo Electrónico:</label>
                 <input
                   type="email"
                   class="form-control"
                   id="email"
                   name="email"
-                  placeholder="Enter email"
+                  placeholder="Ingrese el correo"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">Contraseña:</label>
                 <input
                   type="password"
                   class="form-control"
                   id="password"
                   name="password"
-                  placeholder="Password"
+                  placeholder="Contraseña"
                   required
                 />
               </div>
-              <button type="submit" class="btn btn-primary">Log in</button>
+              <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
             </form>
 
             <hr />
             <div>
-              If you haven't had an account.
-              <a href="/register">Create a new account</a>.
-            </div>
-            <div>
-              Return to
-              <a href="/">Home Page</a>
+              Si no tienes una cuenta.
+              <a href="/register">Crea una nueva cuenta</a>.
             </div>
             <br /><br />
-            <div>
-              View full tutorial on Youtube.
-              <a
-                target="_blank"
-                href="https://www.youtube.com/channel/UCHqJxLo7mKam9GKqqwr2wfA/playlists"
-              >Click here</a>
-            </div>
           </div>
         </div>
       </div>
