--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -7,8 +7,6 @@
 }
 
 .login-left {
-  background-image: url("../images/background.jpg");
-  /*background-image: url("https://w0.peakpx.com/wallpaper/371/86/HD-wallpaper-cool-monkey-art-thumbnail.jpg");*/
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,4 +14,14 @@
   opacity: 0.9;
   height: 600px;
   border-radius: 3px;
+}
+
+#brandImg {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.color-azul {
+  color: #13278a;
 }
