--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -1,5 +1,3 @@
-{{> navbar}}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,12 +9,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+{{> navbar}}
 <body>
 <div class="container">
     <div class="container mt-5">
         <h1>Pagina Principal</h1>
         <div>
-           <h2>Bienvenido {{pass_json user.name}} {{pass_json user.lastName}}</h2>
+           <h2>Bienvenido {{stringify user.name}} {{stringify user.lastName}}</h2>
             <br>
             <div>
             </div>
