--- a/src/views/partials/navbar-register-login.hbs
+++ b/src/views/partials/navbar-register-login.hbs
@@ -20,7 +20,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="">Home</a>
+      <a class="navbar-brand" href="">Company Name</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -35,24 +35,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/analitics">Analitics</a>
+            <a class="nav-link" href="/about">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user">Mi perfil</a>
+            <a class="nav-link" href="/login">Iniciar Sesión</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/company">Datos Empresa</a>
+            <a class="nav-link" href="/register">Regístrate</a>
           </li>
-          <li class="nav-item">
-            <form id="logoutForm" method="POST" action="/logout">
-              <a
-                href="#"
-                onclick="document.getElementById('logoutForm').submit();"
-                class="nav-link"
-              >Cerrar Sesión</a>
-            </form>
-          </li>
-
         </ul>
       </div>
     </nav>
