--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -8,19 +8,115 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>     
 </head>
 {{> navbar}}
 <body>
 <div class="container">
     <div class="container mt-5">
-        <h1>Pagina Principal</h1>
-        <div>
-           <h2>Bienvenido {{stringify user.name}} {{stringify user.lastName}}</h2>
-            <br>
-            <div>
+    <h1>Pagina Principal</h1>
+    <div class="content">
+        <h2>Bienvenido {{user.[0].name}}</h2>
+        <br>
+        <p class="paragraph">Tus productos</p>
+        <br>
+        <input style="display:none;" value="{{stringify products}}" id="productData">
+        {{#if products}}
+            <div class="row" style="margin-top: 50px;">
+                {{#each products}}
+                    <div class="col-lg-4">
+                        <div class="container mt-5 text" style="background-color: #fff;">
+                            <div class="card text-center">
+                                <div class="card-header" style="background-color: #fff; border-bottom:none;">
+                                    <h5 class="card-title paragraphh" style="font-weight: bold;">{{this.product_name}}</h5>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text paragraph">{{this.description}}</p>
+                                    <hr>
+                                    <p class="paragraph" style="text-align: left;">Frecuencia {{this.code_count}}</p>
+                                    <div class="row align-self-center">
+                                        <div class="col-lg-12 col-4">
+                                            <img src="{{this.image}}" alt="click" height="100px" width="120px" />
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-danger btn-block" style="width: 100%; background: #FF2F22; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 2px"
+                                    onclick="showId({{this.id_producto}})">Ver mas</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
+            </div>
+        {{else}}
+            <p class="paragraph">Sin productos</p>
+        {{/if}}
+    </div>
+    <div class="content">
+        <div class="col-lg-12">
+            <div class="row" style="margin-top: 100px;">
+                <div class="col-lg-12">
+                    <h1 class="headerNormal" style="text-align: center;">Grafica de ventas</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <canvas id="productChart" width="240" height="100"></canvas>
+                </div>
+            </div>
+                
+                
             </div>
         </div>
     </div>
 </div>
+
+  
+</div>
 </body>
 </html>
+<script>
+    $(document).ready(function() {
+        let productData = JSON.parse($("#productData").val());
+
+        
+        //Remove image
+        productData.forEach(product => {
+            delete product.image;
+        });
+        //Extract labels and data
+        const labels = productData.map(product => product.product_name)
+        const data = productData.map(product => product.code_count);
+
+        //Create chart
+        const ctx = document.getElementById("productChart").getContext('2d');
+        new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: labels, 
+                datasets: [{
+                    label: 'Frecuencia',
+                    data: data,
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    });
+        
+    
+    function showId(id) {
+        console.log("id: ", id);
+    }
+</script>
