--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -13,7 +13,7 @@
     />
   </head>{{> nav_reg_log}}
   <body>
-    <div class="container">
+    <div class="container" style="background-color: #FFE798;">
       <div class="container">
         <div class="row mt-5">
           <div class="col-5 mt-2 text-center">
