--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -20,7 +20,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="">Home</a>
+      <a class="navbar-brand" href="/home">Home</a>
       <button
         class="navbar-toggler"
         type="button"
