--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -55,7 +55,7 @@
   font-family: "Poppins";
   font-size: 24px;
   font-weight: 500;
-  line-height: 45px;
+  /*line-height: 45px;*/
   letter-spacing: 0em;
   text-align: left;
   color: #000000ab;
