--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -14,68 +14,43 @@
   
 
   <body>
-      <div class="main contactForm">
-          <div class="container mt-5">
-            <h2 class="headerNormal">Contáctanos</h2>
-            <form id="contactForm" action="/submitContact" method="post">
-                <div class="form-group">
-                    <label class="labelText" for="name">Nombre:</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+   <div class="main">
+        <div class="content">
+            <div class="container">
+                <div class="row mainBanner" style="background-color: #FFEFA7; display: flex; align-items: center;">
+
+                    <div class="col-lg-8 col-8">
+                        <div class="text-section" style="margin-top: 150px;">
+                            <p class="paragraph" style="margin-bottom:0 !important; color: #00000063!important;">Digital Solutions</p>
+                            <p class="boldPoppins" style="margin-top: 0 !important;">Contact Us About ZEMA’s Software solutions</p>
+                            <p class="text" style="margin-top: 30px;">We'd love to show you how you can increase your garment’s security, increase your sales productivity, provide better customer service, or all of the above! Here are a few ways to reach out to our sales team.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-3" style="margin-top: 50px;">
+                        <div class="image-container">
+                            <svg width="100%" height="100%" viewBox="0 0 421 402" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 201C0 89.9908 89.9908 0 201 0H220C331.009 0 421 89.9908 421 201C421 312.009 331.009 402 220 402H201C89.9908 402 0 312.009 0 201Z" fill="url(#paint0_linear_369_62)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear_369_62" x1="210.5" y1="-111" x2="210.5" y2="291" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="white"/>
+                                    <stop offset="1" stop-color="white" stop-opacity="0"/>
+                                    </linearGradient>
+                                </defs>
+                                </svg>
+                            <img src="images/contact/img_contact.png" width="100%" height="100%" style="display: block; margin: 0 auto;">
+                        </div>
+                        
+                    </div>
+
                 </div>
-                <div class="form-group">
-                    <label class="labelText" for="email">Correo Electrónico:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label class="labeltext" for="message">Mensaje:</label>
-                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </form>
+
+            </div>
+            
         </div>
-      </div>
+   </div>
+     
    
   </body>
 </html>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $("#contactForm").submit(function(e){
-            e.preventDefault();
-            let formData = {
-                name: $("#name").val(),
-                email: $("#email").val(),
-                message: $("#message").val()
-            };
-
-            $.ajax({
-                url: '/submitContact',
-                type: "POST",
-                data: formData,
-                success: function(res) {
-                    if(res.status === 'success') {
-                        Swal.fire({
-                            title: "Exito",
-                            text: 'El correo se ha enviado exitosamente',
-                            icon: "success",
-                            showCancelButton: false,
-                            allowOutsideClick:false,
-                            confirmButtonText: "Cerrar"
-                        }).then((result) => {
-                            if(result.isConfirmed) {
-                                window.location.href = 'http://localhost:8080/';
-                            }
-                        })
-                    }
-                    if(res.status === 'error') {
-                        Swal.fire({
-                            title: "Error",
-                            text: "No se ha podido enviar el correo",
-                            icon: "error"
-                        });
-                    }
-                }
-            })
-        })
-    });
-</script>
