--- a/src/views/unnown.html
+++ b/src/views/unnown.html
@@ -49,22 +49,22 @@
                         <div class="container">
                             <div class="row" style="margin-bottom: 100px;">
                                 <!-- Card #1 -->
-                                <div class="col-lg-4 d-flex align-items-stretch">
+                                <div class="col-lg-3 d-flex align-items-stretch px-0" >
                                     <div class="container mt-5 text" style="background-color: #FFEFA7;">
-                                        <div class="card text-center h-100" style="margin-bottom: 50px; background-color:#F7F9FC!important;">
+                                        <div class="card text-center h-100" style="background-color: #F7F9FC;">
                                             <div class="card-header" style="background-color: #F7F9FC; border-bottom:none;">
                                                 <img src="images/contact/phone_icon.png" width="60px" height="45px">
                                             </div>
-                                            <div class="card-body" style="padding: 0; background-color:#F7F9FC">
+                                            <div class="card-body" style="padding: 0; background-color:#F7F9FC; margin-bottom:50px;">
                                                 <p class="card-text textContact" style="text-align: center;">Call us directly</p>
                                                 <p class="textContact" style="text-align: center;">+52 722 2958457</p>
-                                                <a href="test.com"><p class="paragraph" style="text-align: center;">See more local numbers</p></a>
+                                                <a href="test.com"><p class="paragraph" style="text-align: center; font-size:12px !important; margin-top:10px !important;">See more local numbers</p></a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- Card #2 -->
-                                <div class="col-lg-4 d-flex align-items-stretch">
+                                <div class="col-lg-3 d-flex align-items-stretch px-0" >
                                     <div class="container mt-5 text" style="background-color: #FFEFA7;">
                                         <div class="card text-center h-100">
                                             <div class="card-header" style="background-color: #F7F9FC; border-bottom:none;">
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                                 <!-- Card #3 -->
-                                <div class="col-lg-4 d-flex align-items-stretch">
+                                <div class="col-lg-3 d-flex align-items-stretch px-0" >
                                     <div class="container mt-5 text" style="background-color: #FFEFA7;">
                                         <div class="card text-center h-100">
                                             <div class="card-header" style="background-color: #F7F9FC; border-bottom:none;">
