--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -107,6 +107,36 @@
   color: #000;
   text-decoration: none;
 }
+.btnLinkContact {
+  font-family: 'Poppins', Arial, sans-serif;
+  font-size: 16px;
+  width: 200px;
+  height: 40px;
+  background-color: #F7F9FC;
+  border: 1px solid #000;
+  color: #000;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 40px;
+}
+.btnLinkContact:hover {
+  color: #000;
+  text-decoration: none;
+}
+.textContact {
+  font-family: 'Poppins', Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #000000;
+
+
+}
+
+
 .image-section {
   width: 100%;
 }
