--- a/src/views/partials/navbar-register-login.hbs
+++ b/src/views/partials/navbar-register-login.hbs
@@ -4,9 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Recursive"
@@ -22,7 +20,6 @@
       .nav-link { color: #000 !important; font-family: 'Poppins' !important; }
       .nav-link:hover { font-weight: bold; }
     </style>
-    <title></title>
   </head>
   <body>
 
@@ -47,11 +44,17 @@
           <a class="nav-link px-5" href="/contacto">Contacto</a>
         </div>
         <div class="navbar-nav mx-auto">
-          <a class="nav-link px-5" href="/login">Iniciar Sesión</a>
+          <a
+            class="nav-link px-5"
+            href="/login"
+            data-toggle="modal"
+            data-target="#loginModal"
+          >Iniciar Sesión</a>
           <a class="nav-link px-5" href="/register">Registrate</a>
         </div>
       </div>
     </nav>
+
     <div
       class="modal fade"
       id="loginModal"
@@ -74,7 +77,7 @@
             </button>
           </div>
           <div class="modal-body">
-            ...
+            <!-- Your modal content goes here -->
           </div>
           <div class="modal-footer">
             <button
@@ -87,21 +90,14 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
 
+    <!-- Bootstrap scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    ></script>
   </body>
 </html>
