--- a/src/views/partials/navbar-register-login.hbs
+++ b/src/views/partials/navbar-register-login.hbs
@@ -44,12 +44,7 @@
           <a class="nav-link px-5" href="/contacto">Contacto</a>
         </div>
         <div class="navbar-nav mx-auto">
-          <a
-            class="nav-link px-5"
-            href="/login"
-            data-toggle="modal"
-            data-target="#loginModal"
-          >Iniciar Sesión</a>
+          <a class="nav-link px-5" href="/login">Iniciar Sesión</a>
           <a class="nav-link px-5" href="/register">Registrate</a>
         </div>
       </div>
